<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mobileapplicationdev.lab1.ShowProfile"
    tools:showIn="@layout/activity_show_profile">

    <Button
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="@dimen/padding"
        android:background="@color/grey"
        android:text="@string/edit"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding"
        android:text="App Name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@id/switch_button"
        android:layout_toLeftOf="@id/switch_button"
        android:background="@color/grey"
        android:textSize="@dimen/text_size"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_min"
        android:layout_below="@id/app_name"
        android:clickable="false"
        android:paddingTop="@dimen/padding"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:lines="1"
        android:layout_below="@id/image"
        android:textSize="@dimen/text_size"
        android:textColor="@color/light_grey"
        android:padding="@dimen/padding"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:id="@+id/line1"
        android:background="@color/black"
        android:layout_below="@id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:lines="1"
        android:layout_below="@id/line1"
        android:textSize="@dimen/text_size"
        android:textColor="@color/light_grey"
        android:padding="@dimen/padding"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:id="@+id/line2"
        android:background="@color/black"
        android:layout_below="@id/mail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio"
        android:lines="2"
        android:id="@+id/bio"
        android:layout_below="@id/line2"
        android:textSize="@dimen/text_size"
        android:textColor="@color/light_grey"
        android:padding="@dimen/padding"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:id="@+id/line3"
        android:background="@color/black"
        android:layout_below="@id/bio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
